oops, we need to prevent scrollbars during a transition

--- a/client/stylesheets/base/layout/_transition.scss
+++ b/client/stylesheets/base/layout/_transition.scss
@@ -1,6 +1,8 @@
 /* D - if you don't want pos rel on the body, we could look into a different way */
 .body {
   position: relative;
+  /* prevent scrollbars on transition */
+  overflow-x: hidden;
 }
 
 .container {
